--- a/index.ipynb
+++ b/index.ipynb
@@ -42,18 +42,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number_50 = 50\n",
     "less_than_50 = None\n",
     "if number_50 > 100:\n",
-    "    # if number_50 is greater than 100, assign the `less_than_50` variable to the number 100\n",
+    "    less_than_50 = 100\n",
     "elif number_50 < 50:\n",
-    "    # if number_50 is greater than 50, assign the `less_than_50` variable to the number 50\n",
+    "    less_than_50 = 50\n",
     "else:\n",
-    "    # else assign the `less_than_50` variable to 49"
+    "    less_than_50 = 49\n",
+    "    \n",
+    "less_than_50"
    ]
   },
   {
@@ -65,13 +78,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'It is so hot out'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
-    "# conditionals go here"
+    "if temperature > 80:\n",
+    "    is_it_hot = \"It is so hot out\"\n",
+    "else:\n",
+    "    is_it_hot = \"This is nothing! Bring on the heat.\"\n",
+    "    \n",
+    "is_it_hot"
    ]
   },
   {
@@ -84,13 +113,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Wednesday'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "# conditionals go here"
+    "if today_is == 1:\n",
+    "    day_of_the_week = 'Sunday'\n",
+    "elif today_is == 2:\n",
+    "    day_of_the_week = 'Monday'\n",
+    "elif today_is == 3:\n",
+    "    day_of_the_week = 'Tuesday'\n",
+    "elif today_is == 4:\n",
+    "    day_of_the_week = 'Wednesday'\n",
+    "elif today_is == 5: \n",
+    "    day_of_the_week = 'Thursday'\n",
+    "elif today_is == 6:\n",
+    "    day_of_the_week = 'Friday'\n",
+    "else:\n",
+    "    day_of_the_week = 'Saturday'\n",
+    "\n",
+    "day_of_the_week"
    ]
   },
   {
@@ -102,14 +157,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
-    "# conditionals go here"
+    "if string.endswith(sub_string):\n",
+    "    ends_with = True\n",
+    "else:\n",
+    "    ends_with = False\n",
+    "\n",
+    "ends_with"
    ]
   },
   {
@@ -143,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
